<?xml version="1.0"?>
<package format="3">
  <name>lidar_to_pgm</name>
  <version>0.0.1</version>
  <description>Convert LiDAR scan data into a PGM occupancy grid</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>opencv-python</depend>  <!-- Needed for saving PGM images -->
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
